--- a/frontend/src/pages/error.html
+++ b/frontend/src/pages/error.html
@@ -1,10 +1,10 @@
-<section class="page page-loading">
+<section class="page page-error">
   <div class="center">
     <div class="brand" style="justify-content:center; flex-direction:column; gap:4px;">
       <div class="logo">Beauty Inside</div>
-      <div class="tag">잠시만요, 분석 중...</div>
+      <div class="tag">다시 연결해볼까요?</div>
     </div>
-    <div class="mosaic" aria-hidden="true" style="justify-content:center; margin: 10px 0 8px;">
+    <div class="mosaic" aria-hidden="true" style="justify-content:center; margin: 10px 0 12px;">
       <span class="tile t-sun"></span>
       <span class="tile t-peach"></span>
       <span class="tile t-sky"></span>
@@ -12,10 +12,9 @@
       <span class="tile t-violet"></span>
       <span class="tile t-coral"></span>
     </div>
-    <div class="spinner"></div>
-    <div class="loading-step" data-loading-step>분석 준비 중…</div>
-    <div class="muted" data-loading-sub></div>
-    <div class="status" data-status></div>
+    <h1 data-error-title>문제가 발생했어요</h1>
+    <p class="muted" data-error-text></p>
+    <button class="btn primary" data-btn-error-cta>다시 시도</button>
     <div class="privacy-badge">🔒 원본 사진 저장 안 함</div>
   </div>
 </section>
