--- a/frontend/src/pages/home.html
+++ b/frontend/src/pages/home.html
@@ -2,39 +2,43 @@
   <header class="header">
     <div class="brand">
       <div class="logo">Beauty Inside</div>
-      <div class="tag">표정 기반 닮은꼴 추천</div>
+      <div class="tag">나만의 닮은꼴 찾기 ✨</div>
     </div>
 
     <div class="mosaic" aria-hidden="true">
-      <span class="tile t-sun"></span>
-      <span class="tile t-peach"></span>
-      <span class="tile t-sky"></span>
-      <span class="tile t-mint"></span>
-      <span class="tile t-violet"></span>
       <span class="tile t-coral"></span>
+      <span class="tile t-sun"></span>
+      <span class="tile t-mint"></span>
+      <span class="tile t-sky"></span>
+      <span class="tile t-violet"></span>
+      <span class="tile t-peach"></span>
     </div>
   </header>
 
   <div class="grid">
     <div class="panel camera">
       <video data-video class="video" autoplay muted playsinline></video>
-      <div class="hint" data-cam-hint></div>
+      <div class="hint" data-cam-hint>카메라 준비 중...</div>
     </div>
 
     <div class="panel">
-      <div class="kicker">오늘의 얼굴을 한 장</div>
-      <h1>표정을 지어보고 촬영해요</h1>
-      <p class="muted">촬영 이미지는 저장하지 않고 분석에만 사용해요.</p>
+      <div class="kicker">오늘의 나는 누구?</div>
+      <h1>당신과 닮은 셀럽을<br />찾아드릴게요</h1>
+      <p class="muted">자연스러운 표정을 지어보세요. 분석 후 원본은 삭제됩니다.</p>
 
-      <button class="btn primary" data-btn-capture>촬영 / 분석</button>
-      <button class="btn" data-btn-retry-cam>카메라 다시 연결</button>
+      <div class="row">
+        <button class="btn primary btn-icon" data-btn-capture>
+          <span>📸</span> 촬영하기
+        </button>
+        <button class="btn secondary" data-btn-retry-cam>🔄 카메라 재연결</button>
+      </div>
 
       <div class="status" data-status></div>
-      <div class="privacy-badge">🔒 원본 사진 저장 안 함</div>
+      <div class="privacy-badge">원본 사진 저장 안 함</div>
     </div>
   </div>
 
   <footer class="footer muted">
-    원본 이미지는 서버/DB에 저장하지 않으며, 다운로드는 사용자 선택이에요.
+    💫 촬영된 이미지는 분석 후 즉시 삭제되며 어디에도 저장되지 않아요
   </footer>
 </section>
