--- a/frontend/src/pages/loading.html
+++ b/frontend/src/pages/loading.html
@@ -1,21 +1,21 @@
 <section class="page page-loading">
   <div class="center">
-    <div class="brand" style="justify-content:center; flex-direction:column; gap:4px;">
+    <div class="brand" style="justify-content:center; flex-direction:column; gap:6px; margin-bottom: 24px;">
       <div class="logo">Beauty Inside</div>
-      <div class="tag">잠시만요, 분석 중...</div>
+      <div class="tag">✨ 당신의 닮은꼴을 찾고 있어요</div>
     </div>
-    <div class="mosaic" aria-hidden="true" style="justify-content:center; margin: 10px 0 8px;">
-      <span class="tile t-sun"></span>
-      <span class="tile t-peach"></span>
-      <span class="tile t-sky"></span>
-      <span class="tile t-mint"></span>
-      <span class="tile t-violet"></span>
+    <div class="mosaic" aria-hidden="true" style="justify-content:center; margin: 16px 0;">
       <span class="tile t-coral"></span>
+      <span class="tile t-sun"></span>
+      <span class="tile t-mint"></span>
+      <span class="tile t-sky"></span>
+      <span class="tile t-violet"></span>
+      <span class="tile t-peach"></span>
     </div>
     <div class="spinner"></div>
-    <div class="loading-step" data-loading-step>분석 준비 중…</div>
-    <div class="muted" data-loading-sub></div>
-    <div class="status" data-status></div>
-    <div class="privacy-badge">🔒 원본 사진 저장 안 함</div>
+    <div class="loading-step" data-loading-step>AI가 분석 중이에요...</div>
+    <div class="muted" style="margin-top: 8px;" data-loading-sub>잠시만 기다려주세요</div>
+    <div class="status" data-status style="margin-top: 16px; max-width: 320px;"></div>
+    <div class="privacy-badge" style="margin-top: 24px;">원본 사진 저장 안 함</div>
   </div>
 </section>
